--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </section>
             <section>
               <h1>
-                <q><span>”</span>I use it everyday. I use it for trips, <br> roommates, loans. I love splitwise.<span>”</span></q>
+                <q><span>”</span>I use it everyday. I use it for trips, <br> roommates, loans. I love Trip Split.<span>”</span></q>
               </h1>
               <p>-Nobody</p>
             </section>
