mobile-tablet-desktop version

--- a/index.html
+++ b/index.html
@@ -44,19 +44,16 @@
          
             <div class="middleCont">
               <div class="middleCont1">
-              <p>The expense tracking & sharing app <br> that does all the
-                math for you </p>
+              <p>Settle up with a friend and record<br> any cash or online payment. </p>
                 <img src="img/UI2.png" class="userIntf1" alt="Phonevw">
               </div>
 
               <div class="middleCont2">
-                <p>The expense tracking & sharing app <br> that does all the
-                  math for you </p>
+                <p>Quickly add expenses on the <br> go before you forget who paid. </p>
                   <img src="img/UI2.png" class="userIntf1" alt="Phonevw">
               </div>
               <div class="middleCont3">
-                <p>The expense tracking & sharing app <br> that does all the
-                  math for you </p>
+                <p>Split expenses with any group:<br> trips, housemates, friends, and family.</p>
                   <img src="img/UI2.png" class="userIntf1" alt="Phonevw">
               </div>
               <div class="middleCont4">
