--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <img src="img/LOGO PIC@3x.png" class="logoMain" alt="TripSplit Logo">
     <nav>
 
-      <a class="navLogBtn" href="#">Log In</a>
-      <a class="navSignBtn" href="#">Sign Up</a>
+      <a class="navLogBtn" href="https://front-end.bw-trip-split.now.sh/login"target="_blank">Log In</a>
+      <a class="navSignBtn" href="https://front-end.bw-trip-split.now.sh/signup"target="_blank">Sign Up</a>
     </nav>
   </div>
 
@@ -30,7 +30,10 @@
         <h1>Split bills, not<br> friendships.</h1>
         <h2><br><br>The expense tracking & sharing app <br> that does all the
           math for you</h2>
-        <button class="signUpButton" id="save">Sign Up </button>
+       
+        <form action="https://front-end.bw-trip-split.now.sh/signup" target="_blank">
+          <button class="signUpButton"   >Sign Up </button>
+      </form>
         <div class="storesBadge">
           <img src="img/applestore.png" class="phApple" alt="TripSplit Logo">
           <img src="img/google-play-badge.png" class="phGoogle" alt="TripSplit Logo">
@@ -55,12 +58,12 @@
       </div>
       <div class="middleCont3">
         <p>Split expenses with any group: trips,<br> housemates, friends, etc.</p>
-        <img src="img/UI2.png" class="userIntf1" alt="Phonevw">
+        <img src="img/UI4.png" class="userIntf1" alt="Phonevw">
       </div>
       <div class="middleCont4">
         <p>The expense tracking & sharing app that does all the
           math for you. </p>
-        <img src="img/UI2.png" class="userIntf1" alt="Phonevw">
+        <img src="img/UI7.png" class="userIntf1" alt="Phonevw">
       </div>
 
     </div>
